# Beyond-Classroom

smellscan/: LICENSE  README.md  pyproject.toml
smellscan/examples/: flags.py  secrets.py  sql_injection.py
smellscan/smellscan/: __init__.py  cli.py  engine.py
smellscan/smellscan.egg-info/: SOURCES.txt
smellscan/smellscan/detectors/: flags.py  secrets.py  sql.py
smellscan/smellscan/smellscan.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
